--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,10 @@
             href="https://fonts.googleapis.com/css2?family=Karla:wght@400;800&family=Montserrat:wght@300;400;700&family=Mulish:wght@200;300;400;500&display=swap"
             rel="stylesheet"
         />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@200;300;400;500;600&display=swap"
+            rel="stylesheet"
+        />
         <title>Document</title>
     </head>
     <body>
