--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
             href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@200;300;400;500;600&display=swap"
             rel="stylesheet"
         />
+        <link rel="icon" type="image/png" href="./assets/images/logo.png" />
         <title>Document</title>
     </head>
     <body>
